cluster/kube-system/external-services/docker-proxy.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: docker-proxy
  namespace: kube-system
spec:
  type: ExternalName
  ports:
    - name: http
      port: 5001
  externalName: 192.168.20.2

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-proxy
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: docker-proxy
    app.kubernetes.io/name: docker-proxy
spec:
  rules:
    - host: "docker-proxy.komhem.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-proxy
                port:
                  number: 5001
  tls:
    - hosts:
        - "docker-proxy.komhem.xyz"
