cluster/kube-system/external-services/nextcloud.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: kube-system
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8090
  externalName: 192.168.20.2

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  rules:
    - host: "next.komhem.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8090
  tls:
    - hosts:
        - "next.komhem.xyz"
