cluster/kube-system/external-services/plex.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: kube-system
spec:
  type: ExternalName
  ports:
    - name: http
      port: 32400
  externalName: 192.168.20.2

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
spec:
  rules:
    - host: "plex.komhem.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - "plex.komhem.xyz"
