cluster/kube-system/external-services/scrutiny.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: scrutiny
  namespace: kube-system
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8080
  externalName: 192.168.20.2

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/instance: scrutiny
    app.kubernetes.io/name: scrutiny
spec:
  rules:
    - host: "scrutiny.komhem.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrutiny
                port:
                  number: 8080
  tls:
    - hosts:
        - "scrutiny.komhem.xyz"
